COSMOS Cigale input produced with Ken photo-zs

--- a/dmu28/dmu28_COSMOS/CIGALE_catalogue_preparation.ipynb
+++ b/dmu28/dmu28_COSMOS/CIGALE_catalogue_preparation.ipynb
@@ -21,7 +21,7 @@
       "This notebook was run with herschelhelp_internal version: \n",
       "0246c5d (Thu Jan 25 17:01:47 2018 +0000) [with local modifications]\n",
       "This notebook was executed on: \n",
-      "2018-02-17 14:37:16.373252\n"
+      "2018-03-09 18:43:09.872489\n"
      ]
     }
    ],
@@ -190,29 +190,37 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:herschelhelp.external:For 767 sources, the band omegacam_u should not be used because it overlaps or is below the Lyman limit at the redshift of these sources. These fluxes were set to NaN.\n",
-      "INFO:herschelhelp.external:For 647 sources, the band megacam_u should not be used because it overlaps or is below the Lyman limit at the redshift of these sources. These fluxes were set to NaN.\n",
-      "INFO:herschelhelp.external:For 106 sources, the band suprime_ib427 should not be used because it overlaps or is below the Lyman limit at the redshift of these sources. These fluxes were set to NaN.\n",
-      "INFO:herschelhelp.external:For 323 sources, the band suprime_b should not be used because it overlaps or is below the Lyman limit at the redshift of these sources. These fluxes were set to NaN.\n",
-      "INFO:herschelhelp.external:For 76 sources, the band suprime_ib464 should not be used because it overlaps or is below the Lyman limit at the redshift of these sources. These fluxes were set to NaN.\n",
-      "INFO:herschelhelp.external:For 161 sources, the band omegacam_g should not be used because it overlaps or is below the Lyman limit at the redshift of these sources. These fluxes were set to NaN.\n",
-      "INFO:herschelhelp.external:For 155 sources, the band suprime_g should not be used because it overlaps or is below the Lyman limit at the redshift of these sources. These fluxes were set to NaN.\n",
-      "INFO:herschelhelp.external:For 157 sources, the band decam_g should not be used because it overlaps or is below the Lyman limit at the redshift of these sources. These fluxes were set to NaN.\n",
-      "INFO:herschelhelp.external:For 71 sources, the band suprime_ia484 should not be used because it overlaps or is below the Lyman limit at the redshift of these sources. These fluxes were set to NaN.\n",
-      "INFO:herschelhelp.external:For 146 sources, the band megacam_g should not be used because it overlaps or is below the Lyman limit at the redshift of these sources. These fluxes were set to NaN.\n",
-      "INFO:herschelhelp.external:For 156 sources, the band gpc1_g should not be used because it overlaps or is below the Lyman limit at the redshift of these sources. These fluxes were set to NaN.\n",
-      "INFO:herschelhelp.external:For 49 sources, the band suprime_ib505 should not be used because it overlaps or is below the Lyman limit at the redshift of these sources. These fluxes were set to NaN.\n",
-      "INFO:herschelhelp.external:For 34 sources, the band suprime_ia527 should not be used because it overlaps or is below the Lyman limit at the redshift of these sources. These fluxes were set to NaN.\n",
-      "INFO:herschelhelp.external:For 55 sources, the band suprime_v should not be used because it overlaps or is below the Lyman limit at the redshift of these sources. These fluxes were set to NaN.\n",
-      "INFO:herschelhelp.external:For 19 sources, the band suprime_ib574 should not be used because it overlaps or is below the Lyman limit at the redshift of these sources. These fluxes were set to NaN.\n",
-      "INFO:herschelhelp.external:For 71 sources, the band acs_f606w should not be used because it overlaps or is below the Lyman limit at the redshift of these sources. These fluxes were set to NaN.\n",
-      "INFO:herschelhelp.external:For 23 sources, the band suprime_r should not be used because it overlaps or is below the Lyman limit at the redshift of these sources. These fluxes were set to NaN.\n",
-      "INFO:herschelhelp.external:For 20 sources, the band gpc1_r should not be used because it overlaps or is below the Lyman limit at the redshift of these sources. These fluxes were set to NaN.\n",
-      "INFO:herschelhelp.external:For 6 sources, the band suprime_ia624 should not be used because it overlaps or is below the Lyman limit at the redshift of these sources. These fluxes were set to NaN.\n",
-      "INFO:herschelhelp.external:For 19 sources, the band megacam_r should not be used because it overlaps or is below the Lyman limit at the redshift of these sources. These fluxes were set to NaN.\n",
-      "INFO:herschelhelp.external:For 19 sources, the band omegacam_r should not be used because it overlaps or is below the Lyman limit at the redshift of these sources. These fluxes were set to NaN.\n",
-      "INFO:herschelhelp.external:For 19 sources, the band decam_r should not be used because it overlaps or is below the Lyman limit at the redshift of these sources. These fluxes were set to NaN.\n",
-      "INFO:herschelhelp.external:For 7 sources, the band suprime_rc should not be used because it overlaps or is below the Lyman limit at the redshift of these sources. These fluxes were set to NaN.\n"
+      "INFO:herschelhelp.external:For 789 sources, the band omegacam_u should not be used because it overlaps or is below the Lyman limit at the redshift of these sources. These fluxes were set to NaN.\n",
+      "INFO:herschelhelp.external:For 718 sources, the band megacam_u should not be used because it overlaps or is below the Lyman limit at the redshift of these sources. These fluxes were set to NaN.\n",
+      "INFO:herschelhelp.external:For 51 sources, the band suprime_ib427 should not be used because it overlaps or is below the Lyman limit at the redshift of these sources. These fluxes were set to NaN.\n",
+      "INFO:herschelhelp.external:For 294 sources, the band suprime_b should not be used because it overlaps or is below the Lyman limit at the redshift of these sources. These fluxes were set to NaN.\n",
+      "INFO:herschelhelp.external:For 24 sources, the band suprime_ib464 should not be used because it overlaps or is below the Lyman limit at the redshift of these sources. These fluxes were set to NaN.\n",
+      "INFO:herschelhelp.external:For 96 sources, the band omegacam_g should not be used because it overlaps or is below the Lyman limit at the redshift of these sources. These fluxes were set to NaN.\n",
+      "INFO:herschelhelp.external:For 83 sources, the band suprime_g should not be used because it overlaps or is below the Lyman limit at the redshift of these sources. These fluxes were set to NaN.\n",
+      "INFO:herschelhelp.external:For 91 sources, the band decam_g should not be used because it overlaps or is below the Lyman limit at the redshift of these sources. These fluxes were set to NaN.\n",
+      "INFO:herschelhelp.external:For 20 sources, the band suprime_ia484 should not be used because it overlaps or is below the Lyman limit at the redshift of these sources. These fluxes were set to NaN.\n",
+      "INFO:herschelhelp.external:For 79 sources, the band megacam_g should not be used because it overlaps or is below the Lyman limit at the redshift of these sources. These fluxes were set to NaN.\n",
+      "INFO:herschelhelp.external:For 88 sources, the band gpc1_g should not be used because it overlaps or is below the Lyman limit at the redshift of these sources. These fluxes were set to NaN.\n",
+      "INFO:herschelhelp.external:For 16 sources, the band suprime_ib505 should not be used because it overlaps or is below the Lyman limit at the redshift of these sources. These fluxes were set to NaN.\n",
+      "INFO:herschelhelp.external:For 12 sources, the band suprime_ia527 should not be used because it overlaps or is below the Lyman limit at the redshift of these sources. These fluxes were set to NaN.\n",
+      "INFO:herschelhelp.external:For 18 sources, the band suprime_v should not be used because it overlaps or is below the Lyman limit at the redshift of these sources. These fluxes were set to NaN.\n",
+      "INFO:herschelhelp.external:For 7 sources, the band suprime_ib574 should not be used because it overlaps or is below the Lyman limit at the redshift of these sources. These fluxes were set to NaN.\n",
+      "INFO:herschelhelp.external:For 21 sources, the band acs_f606w should not be used because it overlaps or is below the Lyman limit at the redshift of these sources. These fluxes were set to NaN.\n",
+      "INFO:herschelhelp.external:For 9 sources, the band suprime_r should not be used because it overlaps or is below the Lyman limit at the redshift of these sources. These fluxes were set to NaN.\n",
+      "INFO:herschelhelp.external:For 7 sources, the band gpc1_r should not be used because it overlaps or is below the Lyman limit at the redshift of these sources. These fluxes were set to NaN.\n",
+      "INFO:herschelhelp.external:For 5 sources, the band suprime_ia624 should not be used because it overlaps or is below the Lyman limit at the redshift of these sources. These fluxes were set to NaN.\n",
+      "INFO:herschelhelp.external:For 7 sources, the band megacam_r should not be used because it overlaps or is below the Lyman limit at the redshift of these sources. These fluxes were set to NaN.\n",
+      "INFO:herschelhelp.external:For 7 sources, the band omegacam_r should not be used because it overlaps or is below the Lyman limit at the redshift of these sources. These fluxes were set to NaN.\n",
+      "INFO:herschelhelp.external:For 7 sources, the band decam_r should not be used because it overlaps or is below the Lyman limit at the redshift of these sources. These fluxes were set to NaN.\n",
+      "INFO:herschelhelp.external:For 6 sources, the band suprime_rc should not be used because it overlaps or is below the Lyman limit at the redshift of these sources. These fluxes were set to NaN.\n",
+      "INFO:herschelhelp.external:For 2 sources, the band suprime_ia679 should not be used because it overlaps or is below the Lyman limit at the redshift of these sources. These fluxes were set to NaN.\n",
+      "INFO:herschelhelp.external:For 1 sources, the band suprime_ib709 should not be used because it overlaps or is below the Lyman limit at the redshift of these sources. These fluxes were set to NaN.\n",
+      "INFO:herschelhelp.external:For 1 sources, the band gpc1_i should not be used because it overlaps or is below the Lyman limit at the redshift of these sources. These fluxes were set to NaN.\n",
+      "INFO:herschelhelp.external:For 1 sources, the band megacam_i should not be used because it overlaps or is below the Lyman limit at the redshift of these sources. These fluxes were set to NaN.\n",
+      "INFO:herschelhelp.external:For 2 sources, the band omegacam_i should not be used because it overlaps or is below the Lyman limit at the redshift of these sources. These fluxes were set to NaN.\n",
+      "INFO:herschelhelp.external:For 1 sources, the band suprime_ip should not be used because it overlaps or is below the Lyman limit at the redshift of these sources. These fluxes were set to NaN.\n",
+      "INFO:herschelhelp.external:For 1 sources, the band suprime_i should not be used because it overlaps or is below the Lyman limit at the redshift of these sources. These fluxes were set to NaN.\n",
+      "INFO:herschelhelp.external:For 1 sources, the band acs_f814w should not be used because it overlaps or is below the Lyman limit at the redshift of these sources. These fluxes were set to NaN.\n"
      ]
     }
    ],
