--- a/dmu32/dmu32_COSMOS/COSMOS_catalogue_merging.ipynb
+++ b/dmu32/dmu32_COSMOS/COSMOS_catalogue_merging.ipynb
@@ -72,16 +72,7 @@
    "metadata": {
     "collapsed": true
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING: UnitsWarning: 'degrees' did not parse as fits unit: At col 0, Unit 'degrees' not supported by the FITS standard.  [astropy.units.core]\n",
-      "WARNING:astropy:UnitsWarning: 'degrees' did not parse as fits unit: At col 0, Unit 'degrees' not supported by the FITS standard. \n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# XID+ MIPS24\n",
     "\n",
@@ -106,16 +97,7 @@
    "metadata": {
     "collapsed": true
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING: UnitsWarning: 'degrees' did not parse as fits unit: At col 0, Unit 'degrees' not supported by the FITS standard.  [astropy.units.core]\n",
-      "WARNING:astropy:UnitsWarning: 'degrees' did not parse as fits unit: At col 0, Unit 'degrees' not supported by the FITS standard. \n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# XID+ PACS\n",
     "\n",
@@ -157,18 +139,7 @@
    "metadata": {
     "collapsed": true
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING: UnitsWarning: 'degrees' did not parse as fits unit: At col 0, Unit 'degrees' not supported by the FITS standard.  [astropy.units.core]\n",
-      "WARNING:astropy:UnitsWarning: 'degrees' did not parse as fits unit: At col 0, Unit 'degrees' not supported by the FITS standard. \n",
-      "WARNING: UnitsWarning: 'mJy/Beam' did not parse as fits unit: At col 4, Unit 'Beam' not supported by the FITS standard. Did you mean beam? [astropy.units.core]\n",
-      "WARNING:astropy:UnitsWarning: 'mJy/Beam' did not parse as fits unit: At col 4, Unit 'Beam' not supported by the FITS standard. Did you mean beam?\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# XID+ SPIRE\n",
     "\n",
@@ -218,27 +189,7 @@
    "metadata": {
     "collapsed": true
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING: UnitsWarning: The unit 'erg' has been deprecated in the FITS standard. Suggested: cm2 g s-2. [astropy.units.format.utils]\n",
-      "WARNING:astropy:UnitsWarning: The unit 'erg' has been deprecated in the FITS standard. Suggested: cm2 g s-2.\n",
-      "WARNING: UnitsWarning: 'log(Msun)' did not parse as fits unit: At col 4, Unit 'Msun' not supported by the FITS standard. Did you mean Sun? [astropy.units.core]\n",
-      "WARNING:astropy:UnitsWarning: 'log(Msun)' did not parse as fits unit: At col 4, Unit 'Msun' not supported by the FITS standard. Did you mean Sun?\n",
-      "WARNING: UnitsWarning: 'log(Msun/yr)' did not parse as fits unit: At col 4, Unit 'Msun' not supported by the FITS standard. Did you mean Sun? [astropy.units.core]\n",
-      "WARNING:astropy:UnitsWarning: 'log(Msun/yr)' did not parse as fits unit: At col 4, Unit 'Msun' not supported by the FITS standard. Did you mean Sun?\n",
-      "WARNING: UnitsWarning: 'log(yr**-1)' did not parse as fits unit: 'log' is not a recognized function [astropy.units.core]\n",
-      "WARNING:astropy:UnitsWarning: 'log(yr**-1)' did not parse as fits unit: 'log' is not a recognized function\n",
-      "WARNING: UnitsWarning: 'log(erg.s**-1.Hz**-1)' did not parse as fits unit: 'log' is not a recognized function [astropy.units.core]\n",
-      "WARNING:astropy:UnitsWarning: 'log(erg.s**-1.Hz**-1)' did not parse as fits unit: 'log' is not a recognized function\n",
-      "/opt/anaconda3/envs/herschelhelp_internal/lib/python3.6/site-packages/astropy/table/column.py:1096: MaskedArrayFutureWarning: setting an item on a masked array which has a shared mask will not copy the mask and also change the original mask array in the future.\n",
-      "Check the NumPy 1.11 release notes for more information.\n",
-      "  ma.MaskedArray.__setitem__(self, index, value)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Photo-z\n",
     "\n",
@@ -262,7 +213,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/opt/anaconda3/envs/herschelhelp_internal/lib/python3.6/site-packages/ipykernel/__main__.py:5: RuntimeWarning: invalid value encountered in less\n"
+      "/opt/anaconda3/envs/herschelhelp_internal/lib/python3.6/site-packages/astropy/table/column.py:965: RuntimeWarning: invalid value encountered in less\n",
+      "  return getattr(self.data, op)(other)\n"
      ]
     }
    ],
