--- a/dmu32/dmu32_Lockman-SWIRE/Lockman-SWIRE_catalogue_merging.ipynb
+++ b/dmu32/dmu32_Lockman-SWIRE/Lockman-SWIRE_catalogue_merging.ipynb
@@ -41,7 +41,8 @@
    "source": [
     "# Set this to true to produce only the catalogue for CIGALE and to false \n",
     "# to continue and merge the CIGALE results too.\n",
-    "FIRST_RUN_FOR_CIGALE = True\n",
+    "MAKE_CIGALE_INPUT = False\n",
+    "MAKE_FINAL_CATALOGUE = True\n",
     "\n",
     "SUFFIX = '20180219'"
    ]
@@ -317,9 +318,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -330,7 +329,7 @@
     }
    ],
    "source": [
-    "if FIRST_RUN_FOR_CIGALE:\n",
+    "if MAKE_CIGALE_INPUT:\n",
     "    \n",
     "    # Sorting the columns\n",
     "    bands = [col[2:] for col in merged_table.colnames\n",
@@ -375,7 +374,7 @@
    },
    "outputs": [],
    "source": [
-    "if not FIRST_RUN_FOR_CIGALE:\n",
+    "if MAKE_FINAL_CATALOGUE:\n",
     "\n",
     "    # Cigale outputs\n",
     "    cigale = Table.read(\"../../dmu28/dmu28_Lockman-SWIRE/data/HELP_final_results.fits\")\n",
@@ -425,7 +424,7 @@
    },
    "outputs": [],
    "source": [
-    "if not FIRST_RUN_FOR_CIGALE:\n",
+    "if MAKE_FINAL_CATALOGUE:\n",
     "\n",
     "    merged_table = join(merged_table, cigale, join_type='left')\n",
     "\n",
@@ -455,7 +454,7 @@
    },
    "outputs": [],
    "source": [
-    "if not FIRST_RUN_FOR_CIGALE:\n",
+    "if MAKE_FINAL_CATALOGUE:\n",
     "\n",
     "    bands = [col[2:] for col in merged_table.colnames\n",
     "             if col.startswith('f_') and not col.startswith('f_ap')]\n",
@@ -470,7 +469,7 @@
    },
    "outputs": [],
    "source": [
-    "if not FIRST_RUN_FOR_CIGALE:\n",
+    "if MAKE_FINAL_CATALOGUE:\n",
     "\n",
     "    columns = ['help_id', 'field', 'ra', 'dec', 'hp_idx', 'ebv', 'redshift', 'zspec']\n",
     "    for band in bands:\n",
@@ -505,9 +504,9 @@
    },
    "outputs": [],
    "source": [
-    "if not FIRST_RUN_FOR_CIGALE:\n",
+    "if MAKE_FINAL_CATALOGUE:\n",
     "\n",
-    "    merged_table[columns].write(\"data/Lockman-SWIRE.fits\", overwrite=True)"
+    "    merged_table.write(\"data/Lockman-SWIRE_{}.fits\".format(SUFFIX), overwrite=True)"
    ]
   }
  ],
