Attempt to solve COSMOS id woes

--- a/dmu32/dmu32_COSMOS/COSMOS_catalogue_merging.ipynb
+++ b/dmu32/dmu32_COSMOS/COSMOS_catalogue_merging.ipynb
@@ -60,7 +60,7 @@
    "outputs": [],
    "source": [
     "# Master list\n",
-    "SUFFIX='20180217'\n",
+    "SUFFIX='20180313'\n",
     "ml = Table.read(\n",
     "    \"../../dmu1/dmu1_ml_COSMOS/data/master_catalogue_cosmos_{}.fits\".format(SUFFIX))\n",
     "ml.meta = None"
@@ -88,7 +88,8 @@
     "    name=\"ferr_mips_24\"\n",
     "))\n",
     "xid_mips24['F_MIPS_24'].name = \"f_mips_24\"\n",
-    "xid_mips24 = xid_mips24['help_id', 'f_mips_24', 'ferr_mips_24']"
+    "xid_mips24 = xid_mips24['help_id', 'f_mips_24', 'ferr_mips_24']\n",
+    "xid_mips24['help_id'] = xid_mips24['help_id'].astype('S27')"
    ]
   },
   {
@@ -127,6 +128,7 @@
     "))\n",
     "xid_pacs['F_PACS_160'].name = \"f_pacs_red\"\n",
     "xid_pacs['HELP_ID'].name = \"help_id\"\n",
+    "xid_pacs['help_id'] = xid_pacs['help_id'].astype('S27')\n",
     "\n",
     "xid_pacs = xid_pacs['help_id', 'f_pacs_green', 'ferr_pacs_green',\n",
     "                    'f_pacs_red', 'ferr_pacs_red',\n",
@@ -177,6 +179,7 @@
     "))\n",
     "xid_spire['F_SPIRE_500'].name = \"f_spire_500\"\n",
     "\n",
+    "xid_spire['help_id'] = xid_spire['help_id'].astype('S27')\n",
     "xid_spire = xid_spire['help_id',\n",
     "                      'f_spire_250', 'ferr_spire_250',\n",
     "                      'f_spire_350', 'ferr_spire_350',\n",
@@ -197,6 +200,7 @@
     "photoz.meta = None\n",
     "\n",
     "photoz = photoz['help_id', 'z1_median']\n",
+    "photoz['help_id'] = photoz['help_id'].astype('S27')\n",
     "photoz['z1_median'].name = 'redshift'\n",
     "\n",
     "photoz['redshift'][photoz['redshift'] < 0] = np.nan  # -99 used for missing values"
@@ -342,7 +346,7 @@
     "    \n",
     "\n",
     "    # Check that we did not forget any column\n",
-    "    # assert set(columns) == set(merged_table.colnames)\n",
+    "    print( set(columns) - set(merged_table.colnames))\n",
     "    \n",
     "    \n",
     "    merged_table.write(\"data/COSMOS_{}_cigale.fits\".format(SUFFIX), overwrite=True)"
