Another attempt to fix COSMOS id issues

--- a/dmu32/dmu32_COSMOS/COSMOS_catalogue_merging.ipynb
+++ b/dmu32/dmu32_COSMOS/COSMOS_catalogue_merging.ipynb
@@ -89,7 +89,9 @@
     "))\n",
     "xid_mips24['F_MIPS_24'].name = \"f_mips_24\"\n",
     "xid_mips24 = xid_mips24['help_id', 'f_mips_24', 'ferr_mips_24']\n",
-    "xid_mips24['help_id'] = xid_mips24['help_id'].astype('S27')"
+    "\n",
+    "xid_mips24['help_id'] = xid_mips24['help_id'].astype('S27')\n",
+    "xid_mips24['help_id'] = Column(np.char.strip(xid_mips24['help_id']))"
    ]
   },
   {
@@ -129,6 +131,7 @@
     "xid_pacs['F_PACS_160'].name = \"f_pacs_red\"\n",
     "xid_pacs['HELP_ID'].name = \"help_id\"\n",
     "xid_pacs['help_id'] = xid_pacs['help_id'].astype('S27')\n",
+    "xid_pacs['help_id'] = Column(np.char.strip(xid_pacs['help_id']))\n",
     "\n",
     "xid_pacs = xid_pacs['help_id', 'f_pacs_green', 'ferr_pacs_green',\n",
     "                    'f_pacs_red', 'ferr_pacs_red',\n",
@@ -180,6 +183,8 @@
     "xid_spire['F_SPIRE_500'].name = \"f_spire_500\"\n",
     "\n",
     "xid_spire['help_id'] = xid_spire['help_id'].astype('S27')\n",
+    "xid_spire['help_id'] = Column(np.char.strip(xid_spire['help_id']))\n",
+    "\n",
     "xid_spire = xid_spire['help_id',\n",
     "                      'f_spire_250', 'ferr_spire_250',\n",
     "                      'f_spire_350', 'ferr_spire_350',\n",
@@ -201,6 +206,8 @@
     "\n",
     "photoz = photoz['help_id', 'z1_median']\n",
     "photoz['help_id'] = photoz['help_id'].astype('S27')\n",
+    "photoz['help_id'] = Column(np.char.strip(photoz['help_id']))\n",
+    "\n",
     "photoz['z1_median'].name = 'redshift'\n",
     "\n",
     "photoz['redshift'][photoz['redshift'] < 0] = np.nan  # -99 used for missing values"
