Making GAMA-15 Cigale input with artefacts removed

--- a/dmu28/dmu28_GAMA-15/CIGALE_catalogue_preparation.ipynb
+++ b/dmu28/dmu28_GAMA-15/CIGALE_catalogue_preparation.ipynb
@@ -40,9 +40,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -117,6 +115,18 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "#To use CIGALE to generate XID+priors we use flag_optnir_det\n",
+    "artefact_mask = (master_catalogue['flag_optnir_det'] == 3 ) | (master_catalogue['flag_optnir_det'] == 7 )"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -132,7 +142,7 @@
    "outputs": [],
    "source": [
     "#best_catalogue = master_catalogue[combined_good].copy()\n",
-    "best_catalogue = master_catalogue.copy()"
+    "best_catalogue = master_catalogue[artefact_mask].copy()"
    ]
   },
   {
@@ -386,7 +396,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
