Attempting final VO publish

--- a/dmu32/the_end.ipynb
+++ b/dmu32/the_end.ipynb
@@ -16,7 +16,16 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/rs548/anaconda/envs/herschelhelp_internal/lib/python3.6/site-packages/seaborn/apionly.py:6: UserWarning: As seaborn no longer sets a default style on import, the seaborn.apionly module is deprecated. It will be removed in a future version.\n",
+      "  warnings.warn(msg, UserWarning)\n"
+     ]
+    }
+   ],
    "source": [
     "from astropy.table import Table, Column\n",
     "from astropy import units as u\n",
@@ -27,6 +36,7 @@
     "from herschelhelp_internal.masterlist import find_last_ml_suffix\n",
     "\n",
     "import os\n",
+    "\n",
     "import humanfriendly"
    ]
   },
@@ -58,7 +68,7 @@
      "data": {
       "text/html": [
        "<i>Table length=23</i>\n",
-       "<table id=\"table140647863738264-877525\" class=\"table-striped table-bordered table-condensed\">\n",
+       "<table id=\"table4731596192-500279\" class=\"table-striped table-bordered table-condensed\">\n",
        "<thead><tr><th>idx</th><th>field</th><th>dr1_suffix</th><th>last_suffix</th><th>objects</th><th>area_sq_degrees</th><th>file_size_bytes</th><th>file_size_readable</th></tr></thead>\n",
        "<tr><td>0</td><td>AKARI-NEP</td><td>20180215</td><td>20180215</td><td>531746</td><td>9.0</td><td>348848640</td><td>348.85 MB</td></tr>\n",
        "<tr><td>1</td><td>AKARI-SEP</td><td>20180221</td><td>20180221</td><td>844172</td><td>9.0</td><td>538606080</td><td>538.61 MB</td></tr>\n",
@@ -106,14 +116,14 @@
        "    datatables: 'https://cdn.datatables.net/1.10.12/js/jquery.dataTables.min'\n",
        "}});\n",
        "require([\"datatables\"], function(){\n",
-       "    console.log(\"$('#table140647863738264-877525').dataTable()\");\n",
+       "    console.log(\"$('#table4731596192-500279').dataTable()\");\n",
        "    \n",
        "jQuery.extend( jQuery.fn.dataTableExt.oSort, {\n",
        "    \"optionalnum-asc\": astropy_sort_num,\n",
        "    \"optionalnum-desc\": function (a,b) { return -astropy_sort_num(a, b); }\n",
        "});\n",
        "\n",
-       "    $('#table140647863738264-877525').dataTable({\n",
+       "    $('#table4731596192-500279').dataTable({\n",
        "        order: [],\n",
        "        pageLength: 50,\n",
        "        lengthMenu: [[10, 25, 50, 100, 500, 1000, -1], [10, 25, 50, 100, 500, 1000, 'All']],\n",
@@ -138,48 +148,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "./dmu32_AKARI-NEP/data/AKARI-NEP_20180215.fits\n",
-      "./dmu32_AKARI-SEP/data/AKARI-SEP_20180221.fits\n",
-      "./dmu32_Bootes/data/Bootes_20180216.fits\n",
-      "./dmu32_CDFS-SWIRE/data/CDFS-SWIRE_20180221.fits\n",
-      "./dmu32_COSMOS/data/COSMOS_20180217.fits\n",
-      "./dmu32_EGS/data/EGS_20180217.fits\n",
-      "./dmu32_ELAIS-N1/data/ELAIS-N1_20171016.fits\n",
-      "./dmu32_ELAIS-N2/data/ELAIS-N2_20180218.fits\n",
-      "./dmu32_ELAIS-S1/data/ELAIS-S1_20180221.fits\n",
-      "./dmu32_GAMA-09/data/GAMA-09_20171206.fits\n",
-      "./dmu32_GAMA-12/data/GAMA-12_20180218.fits\n",
-      "./dmu32_GAMA-15/data/GAMA-15_20180213.fits\n",
-      "./dmu32_HDF-N/data/HDF-N_20180219.fits\n",
-      "./dmu32_Herschel-Stripe-82/data/Herschel-Stripe-82_20180301.fits\n",
-      "./dmu32_Lockman-SWIRE/data/Lockman-SWIRE_20180219.fits\n",
-      "./dmu32_NGP/data/NGP_20180219.fits\n",
-      "./dmu32_SA13/data/SA13_20180219.fits\n",
-      "./dmu32_SGP/data/SGP_20180221.fits\n",
-      "./dmu32_SPIRE-NEP/data/SPIRE-NEP_20180220.fits\n",
-      "./dmu32_SSDF/data/SSDF_20180122.fits\n",
-      "./dmu32_xFLS/data/xFLS_20180221.fits\n",
-      "./dmu32_XMM-13hr/data/XMM-13hr_20180221.fits\n",
-      "./dmu32_XMM-LSS/data/XMM-LSS_20180221.fits\n"
+      "./dmu32_EGS/data/EGS_20180217_cigale.fits\n",
+      "./dmu32_HDF-N/data/HDF-N_20180219_cigale.fits\n"
      ]
     }
    ],
    "source": [
+    "GAVO_FOLDER = '/mnt/hedam/data_vo/'\n",
+    "stilts_command = 'stilts tpipe {in_file} omode=out ofmt=csv out={GAVO_FOLDER}{out_file}'\n",
     "\n",
-    "final_data = open('help.lis', 'w+')\n",
+    "final_data = open('help_to_vo.sh', 'w+')\n",
     "for field in dr1:\n",
+    "    final_help_product = './dmu32_{}/data/{}_{}.fits'.format(field[0], field[0], field[1])\n",
+    "    cigale_input = './dmu32_{}/data/{}_{}_cigale.fits'.format(field[0], field[0], field[1])\n",
     "\n",
-    "    print('./dmu32_{}/data/{}_{}.fits'.format(field[0], field[0], field[1]))\n",
+    "    if os.path.exists(final_help_product):\n",
+    "        print(final_help_product)\n",
     "    \n",
-    "    #Test with Cigale input files\n",
-    "    final_data.write('./dmu32_{}/data/{}_{}_cigale.fits\\n'.format(field[0], field[0], field[1]))\n",
+    "        #Test with Cigale input files\n",
+    "        final_data.write(stilts_command.format(in_file=final_help_product, \n",
+    "                                               GAVO_FOLDER=GAVO_FOLDER, \n",
+    "                                               out_file='/herschelhelp/{}_{}_all.csv \\n'.format(field[0], \n",
+    "                                                                                                field[1])))\n",
+    "    elif os.path.exists(cigale_input):\n",
+    "        print(cigale_input)\n",
+    "        final_data.write(stilts_command.format(in_file=cigale_input, \n",
+    "                                               GAVO_FOLDER=GAVO_FOLDER, \n",
+    "                                               out_file='/herschelhelp/{}_{}_incomplete.csv \\n'.format(field[0], \n",
+    "                                                                                                       field[1])))\n",
+    "        \n",
+    "    else:\n",
+    "        final_data.write('# No data for {} \\n'.format(field[0]))\n",
+    "        \n",
     "    #final_data.write('./dmu32_{}/data/{}_{}.fits'.format(field[0], field[0], field[1]))\n",
     "    \n",
     "final_data.close()"
@@ -189,16 +196,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The out put of this notebook is a file 'dr1_all_final_cats.lis' which contains a list of all the final dmu32\n",
-    "\n",
-    "<pre>\n",
-    "stilts tcat in=@final_data.lis ofmt=csv out=help.csv\n",
-    "</pre>"
+    "The out put of this notebook is a shell script which will write all the fits files to csv files in the vo folder"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -222,7 +225,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
