Fixing folder for vo data

--- a/dmu32/the_end.ipynb
+++ b/dmu32/the_end.ipynb
@@ -175,13 +175,13 @@
     "        #Test with Cigale input files\n",
     "        final_data.write(stilts_command.format(in_file=final_help_product, \n",
     "                                               GAVO_FOLDER=GAVO_FOLDER, \n",
-    "                                               out_file='/herschelhelp/{}_{}_all.csv \\n'.format(field[0], \n",
+    "                                               out_file='/herschelhelp/main/{}_{}_all.csv \\n'.format(field[0], \n",
     "                                                                                                field[1])))\n",
     "    elif os.path.exists(cigale_input):\n",
     "        print(cigale_input)\n",
     "        final_data.write(stilts_command.format(in_file=cigale_input, \n",
     "                                               GAVO_FOLDER=GAVO_FOLDER, \n",
-    "                                               out_file='/herschelhelp/{}_{}_incomplete.csv \\n'.format(field[0], \n",
+    "                                               out_file='/herschelhelp/main/{}_{}_incomplete.csv \\n'.format(field[0], \n",
     "                                                                                                       field[1])))\n",
     "        \n",
     "    else:\n",
