Rerunning all specz cigale with optnir criterion
Running Cigale on sources with few measurements is problematic so we apply the same criteria as XID+ and insist on 2 opt and 2 nir phots

--- a/dmu28/dmu28_ELAIS-N1/CIGALE_catalogue_preparation.ipynb
+++ b/dmu28/dmu28_ELAIS-N1/CIGALE_catalogue_preparation.ipynb
@@ -33,7 +33,8 @@
    },
    "outputs": [],
    "source": [
-    "master_catalogue = Table.read(\"../../dmu32/dmu32_ELAIS-N1/data/ELAIS-N1_20171020_cigale.fits\")"
+    "SUFFIX = '20171020'\n",
+    "master_catalogue = Table.read(\"../../dmu32/dmu32_ELAIS-N1/data/ELAIS-N1_{}_cigale.fits\".format(SUFFIX))"
    ]
   },
   {
@@ -117,6 +118,19 @@
    ],
    "source": [
     "print(\"Number of good sources: {}\".format(np.sum(combined_good)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Only sources with at least two optical and at least two near infrared detections\n",
+    "optnir = ((master_catalogue['flag_optnir_det'] == 3) \n",
+    "          | (master_catalogue['flag_optnir_det'] == 7))"
    ]
   },
   {
@@ -232,10 +246,12 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "best_catalogue.write(\"data_tmp/ELAIS-N1_cigale_best_extcor_20171020.fits\")"
+    "best_catalogue.write(\"data_tmp/ELAIS-N1_cigale_best_extcor_{}.fits\".format(SUFFIX), overwrite=True)"
    ]
   },
   {
@@ -253,7 +269,7 @@
    },
    "outputs": [],
    "source": [
-    "best_catalogue = master_catalogue[combined_good].copy()"
+    "best_catalogue = master_catalogue[optnir].copy()"
    ]
   },
   {
@@ -363,7 +379,7 @@
    },
    "outputs": [],
    "source": [
-    "best_catalogue.write(\"data_tmp/ELAIS-N1_cigale_best_extcor_zspec_20171020.fits\")"
+    "best_catalogue.write(\"data_tmp/ELAIS-N1_cigale_optnir_extcor_zspec_{}.fits\".format(SUFFIX), overwrite=True)"
    ]
   }
  ],
@@ -383,7 +399,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.0"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
