--- a/dmu28/dmu28_GAMA-15/CIGALE_catalogue_preparation.ipynb
+++ b/dmu28/dmu28_GAMA-15/CIGALE_catalogue_preparation.ipynb
@@ -122,8 +122,9 @@
    },
    "outputs": [],
    "source": [
-    "#To use CIGALE to generate XID+priors we use flag_optnir_det\n",
-    "artefact_mask = (master_catalogue['flag_optnir_det'] == 3 ) | (master_catalogue['flag_optnir_det'] == 7 )"
+    "# Only sources with at least two optical and at least two near infrared detections\n",
+    "optnir = ((master_catalogue['flag_optnir_det'] == 3) \n",
+    "          | (master_catalogue['flag_optnir_det'] == 7))"
    ]
   },
   {
@@ -142,7 +143,7 @@
    "outputs": [],
    "source": [
     "#best_catalogue = master_catalogue[combined_good].copy()\n",
-    "best_catalogue = master_catalogue[artefact_mask].copy()"
+    "best_catalogue = master_catalogue[optnir].copy()"
    ]
   },
   {
@@ -245,7 +246,7 @@
    },
    "outputs": [],
    "source": [
-    "best_catalogue.write(\"data_tmp/GAMA-15_cigale_best_extcor_{}.fits\".format(SUFFIX), overwrite=True)"
+    "best_catalogue.write(\"data_tmp/GAMA-15_cigale_optnir_extcor_{}.fits\".format(SUFFIX), overwrite=True)"
    ]
   },
   {
@@ -263,7 +264,7 @@
    },
    "outputs": [],
    "source": [
-    "best_catalogue = master_catalogue.copy()"
+    "best_catalogue = master_catalogue[optnir].copy()"
    ]
   },
   {
@@ -376,7 +377,7 @@
    },
    "outputs": [],
    "source": [
-    "best_catalogue.write(\"data_tmp/GAMA-15_cigale_best_extcor_zspec_{}.fits\".format(SUFFIX), overwrite=True)"
+    "best_catalogue.write(\"data_tmp/GAMA-15_cigale_optnir_extcor_zspec_{}.fits\".format(SUFFIX), overwrite=True)"
    ]
   }
  ],
