--- a/dmu28/dmu28_Herschel-Stripe-82/CIGALE_catalogue_preparation.ipynb
+++ b/dmu28/dmu28_Herschel-Stripe-82/CIGALE_catalogue_preparation.ipynb
@@ -100,6 +100,19 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Only sources with at least two optical and at least two near infrared detections\n",
+    "optnir = ((master_catalogue['flag_optnir_det'] == 3) \n",
+    "          | (master_catalogue['flag_optnir_det'] == 7))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -9012,6 +9025,10 @@
     "        \n",
     "    file_num = tile.split('_')[4].split('.')[0]\n",
     "    best_catalogue = Table.read(tile)\n",
+    "    optnir = ((best_catalogue['flag_optnir_det'] == 3) \n",
+    "          | (best_catalogue['flag_optnir_det'] == 7))\n",
+    "    \n",
+    "    best_catalogue = best_catalogue[optnir]\n",
     "\n",
     "    best_catalogue['zspec'].name = 'redshift'\n",
     "\n",
