--- a/dmu28/dmu28_Lockman-SWIRE/CIGALE_catalogue_preparation.ipynb
+++ b/dmu28/dmu28_Lockman-SWIRE/CIGALE_catalogue_preparation.ipynb
@@ -125,6 +125,19 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Only sources with at least two optical and at least two near infrared detections\n",
+    "optnir = ((master_catalogue['flag_optnir_det'] == 3) \n",
+    "          | (master_catalogue['flag_optnir_det'] == 7))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -242,7 +255,7 @@
    },
    "outputs": [],
    "source": [
-    "best_catalogue.write(\"data_tmp/Lockman-SWIRE_cigale_best_extcor_{}.fits\".format(SUFFIX))"
+    "best_catalogue.write(\"data_tmp/Lockman-SWIRE_cigale_best_extcor_{}.fits\".format(SUFFIX), overwrite=True)"
    ]
   },
   {
@@ -260,7 +273,7 @@
    },
    "outputs": [],
    "source": [
-    "best_catalogue = master_catalogue[combined_good].copy()\n"
+    "best_catalogue = master_catalogue[optnir].copy()"
    ]
   },
   {
@@ -373,7 +386,7 @@
    },
    "outputs": [],
    "source": [
-    "best_catalogue.write(\"data_tmp/Lockman-SWIRE_cigale_best_extcor_zspec_{}.fits\".format(SUFFIX))"
+    "best_catalogue.write(\"data_tmp/Lockman-SWIRE_cigale_optnir_extcor_zspec_{}.fits\".format(SUFFIX), overwrite=True)"
    ]
   }
  ],
