--- a/dmu28/dmu28_AKARI-NEP/CIGALE_catalogue_preparation.ipynb
+++ b/dmu28/dmu28_AKARI-NEP/CIGALE_catalogue_preparation.ipynb
@@ -117,6 +117,19 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Only sources with at least two optical and at least two near infrared detections\n",
+    "optnir = ((master_catalogue['flag_optnir_det'] == 3) \n",
+    "          | (master_catalogue['flag_optnir_det'] == 7))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -243,7 +256,7 @@
    },
    "outputs": [],
    "source": [
-    "best_catalogue = master_catalogue.copy() #[combined_good].copy()"
+    "best_catalogue = master_catalogue[optnir].copy()"
    ]
   },
   {
@@ -347,7 +360,7 @@
    },
    "outputs": [],
    "source": [
-    "best_catalogue.write(\"data_tmp/AKARI-NEP_cigale_best_extcor_zspec_{}.fits\".format(SUFFIX), overwrite=True)"
+    "best_catalogue.write(\"data_tmp/AKARI-NEP_cigale_optnir_extcor_zspec_{}.fits\".format(SUFFIX), overwrite=True)"
    ]
   }
  ],
@@ -367,7 +380,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
