--- a/dmu28/dmu28_AKARI-SEP/CIGALE_catalogue_preparation.ipynb
+++ b/dmu28/dmu28_AKARI-SEP/CIGALE_catalogue_preparation.ipynb
@@ -118,6 +118,19 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Only sources with at least two optical and at least two near infrared detections\n",
+    "optnir = ((master_catalogue['flag_optnir_det'] == 3) \n",
+    "          | (master_catalogue['flag_optnir_det'] == 7))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -235,7 +248,7 @@
    },
    "outputs": [],
    "source": [
-    "best_catalogue = master_catalogue.copy() # best_catalogue = master_catalogue[combined_good].copy()"
+    "best_catalogue = master_catalogue[optnir].copy()"
    ]
   },
   {
@@ -264,9 +277,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -329,7 +340,7 @@
    },
    "outputs": [],
    "source": [
-    "best_catalogue.write(\"data_tmp/AKARI-SEP_cigale_best_extcor_zspec_{}.fits\".format(SUFFIX), overwrite=True)"
+    "best_catalogue.write(\"data_tmp/AKARI-SEP_cigale_optnir_extcor_zspec_{}.fits\".format(SUFFIX), overwrite=True)"
    ]
   }
  ],
@@ -349,7 +360,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
