--- a/dmu28/dmu28_XMM-LSS/CIGALE_catalogue_preparation.ipynb
+++ b/dmu28/dmu28_XMM-LSS/CIGALE_catalogue_preparation.ipynb
@@ -2151,7 +2151,10 @@
     "        \n",
     "    file_num = tile.split('_')[4].split('.')[0]\n",
     "    best_catalogue = Table.read(tile)\n",
-    "\n",
+    "    optnir = ((best_catalogue['flag_optnir_det'] == 3) \n",
+    "          | (best_catalogue['flag_optnir_det'] == 7))\n",
+    "    \n",
+    "    best_catalogue = best_catalogue[optnir]\n",
     "\n",
     "\n",
     "    best_catalogue = best_catalogue[~np.isnan(best_catalogue[\"redshift\"])]\n",
@@ -2175,7 +2178,7 @@
     "    remove_unneeded_fluxes(h_bands)\n",
     "    remove_unneeded_fluxes(k_bands)\n",
     "\n",
-    "    best_catalogue.write(\"data_tmp/tiles/XMM-LSS_cigale_best_extcor_zspec_{}_{}.fits\".format(SUFFIX, file_num), overwrite=True)"
+    "    best_catalogue.write(\"data_tmp/tiles/XMM-LSS_cigale_optnir_extcor_zspec_{}_{}.fits\".format(SUFFIX, file_num), overwrite=True)"
    ]
   }
  ],
@@ -2195,7 +2198,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
